--- a/subscriptions.html
+++ b/subscriptions.html
@@ -1562,7 +1562,7 @@ Why SVL Global
 				</div>
 			</section>
 			<section id="Dealers" class="uk-section p-4 grey-700 text-justify font-size-3">
-				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Dealers</span></h2>
+				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Dealers Subscriptions</span></h2>
 				<div class="uk-child-width-1-1" uk-grid uk-height-match="target: > div > .uk-card">
 					<div>
 						<div class="card card-body shadow-4dp">
