--- a/subscriptions.html
+++ b/subscriptions.html
@@ -1562,7 +1562,7 @@ Why SVL Global
 				</div>
 			</section>
 			<section id="Dealers" class="uk-section p-4 grey-700 text-justify font-size-3">
-				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Dealers Subscriptions</span></h2>
+				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Dealers Subscription</span></h2>
 				<div class="uk-child-width-1-1" uk-grid uk-height-match="target: > div > .uk-card">
 					<div>
 						<div class="card card-body shadow-4dp">
@@ -1588,7 +1588,7 @@ Why SVL Global
 											<h5 class="text-success">999 <span class="font-weight-light">/month*</span></h5>
 											<p>Actual Price <s>4995</s>/month</p>
 											<p>12 Months Commitment</p>
-											<p><a class="btn btn-primary rounded-pill shadow-sm bg-orange-500-hover border-orange-500-hover px-5" href="#" role="button">Subscribe</a></p>
+											<p><a class="btn btn-lg btn-primary rounded-pill shadow-sm bg-orange-500-hover border-orange-500-hover px-5" href="#" role="button">Subscribe</a></p>
 											<a class="uk-button uk-button-text" href="#" role="button">Learn More</a>
 										</div>
 									</div>
