--- a/subscriptions.html
+++ b/subscriptions.html
@@ -1588,7 +1588,7 @@ Why SVL Global
 											<h5 class="text-success">999 <span class="font-weight-light">/month*</span></h5>
 											<p>Actual Price <s>4995</s>/month</p>
 											<p>12 Months Commitment</p>
-											<p><a class="btn btn-lg btn-primary rounded-pill shadow-sm bg-orange-500-hover border-orange-500-hover px-5" href="#" role="button">Subscribe</a></p>
+											<p><a class="btn btn-lg btn-primary rounded-pill shadow-sm bg-orange-500-hover border-orange-500-hover text-uppercase px-4 font-weight-bold" href="#" role="button">Subscribe</a></p>
 											<a class="uk-button uk-button-text" href="#" role="button">Learn More</a>
 										</div>
 									</div>
