--- a/subscriptions.html
+++ b/subscriptions.html
@@ -9,6 +9,7 @@
 <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 <!-- Add the slick-theme.css if you want default styling -->
@@ -1574,21 +1575,20 @@ Why SVL Global
 									<h3 class="text-success">Used Bike Dealers</h3>
 									<p class="uk-margin-remove-top">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem omnis, autem soluta voluptate sint quo voluptatibus nostrum id, delectus, eaque exercitationem reiciendis doloremque commodi consequuntur sequi nam! Dicta, incidunt recusandae.</p>
 									<div class="uk-child-width-expand uk-grid-small" uk-grid>
-										<div class="uk-width-1-2">
+										<div class="uk-width-expand">
 											<h5>Integrated Features:</h5>
-											<ul class="uk-list uk-list-bullet">
-												<li>Lorem ipsum dolor sit amet</li>
-												<li>consectetur adipisicing elit</li>
-												<li>Consequatur earum dolores quam</li>
-												<li>Porro et impedit amet ut, quas atque</li>
-												<li>Perspiciatis beatae consectetur</li>
+											<ul class="list-unstyled guidelines-check-list">
+												<li>Ask questions to be clear on vehicle details</li>
+												<li>Be aware of time &amp; place when going for vehicle test-drive</li>
+												<li>Don't make a payment without verifying the credentials</li>
+												<li>Don't make a payment without verifying the credentials</li>
 											</ul>
 										</div>
-										<div class="uk-width-1-2 text-right">
-											<h5 class="text-success">999 <span class="font-weight-light">/month*</span></h5>
-											<p>Actual Price <s>4995</s>/month</p>
-											<p>12 Months Commitment</p>
-											<p><a class="btn btn-lg btn-primary rounded-pill shadow-sm bg-orange-500-hover border-orange-500-hover text-uppercase px-4 font-weight-bold" href="#" role="button">Subscribe</a></p>
+										<div class="uk-width-auto text-right">
+											<h5 class="text-success"><i class="fas fa-rupee-sign"></i> 999 <span class="font-weight-light">/month*</span></h5>
+											<p>Actual Price <s><i class="fas fa-rupee-sign"></i> 4995</s>/month</p>
+											<p class="mb-1">12 Months Commitment</p>
+											<p class="mb-1"><a class="btn btn-lg btn-primary rounded-pill shadow-sm bg-orange-500-hover border-orange-500-hover text-uppercase px-4 font-weight-bold" href="#" role="button">Subscribe</a></p>
 											<a class="uk-button uk-button-text" href="#" role="button">Learn More</a>
 										</div>
 									</div>
