--- a/subscriptions.html
+++ b/subscriptions.html
@@ -1592,7 +1592,7 @@ Why SVL Global
 											<a class="uk-button uk-button-text" href="#" role="button">Learn More</a>
 										</div>
 									</div>
-									
+									<img src="assets/img/subscribe-icons.jpeg" alt="" class="img-fluid">
 								</div>
 								
 							</div>
